objects/Shipment_Line__c.object
<CustomObject>
    <description>Detail of shipment record</description>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Ultimate_Customer_Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAUNUMBER__c</fullName>
        <label>BAU number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_of_Lading__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Bill_Lading__c</formula>
        <label>Bill of Lading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Invoice__c</fullName>
        <formula>HYPERLINK( 
$Label.PDF_links_from_Reports+&apos;billingdoc_&apos;+RIGHT(Shipment__r.Customer__c,6)+&apos;_&apos;+Invoice_Num__c + IF(ISBLANK($User.ContactId) , &apos;&apos;, &apos;&amp;username=&apos;+$User.Id) ,Invoice_Num__c 
)</formula>
        <label>Billing Invoice#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_PRO_URL__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Carrier_PRO_URL__c</formula>
        <label>CARRIER Tracking Web Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_PRO__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Carrier_PRO__c</formula>
        <label>Carrier tracking #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Item__c</fullName>
        <label>Commercial Invoice Item</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Num__c</fullName>
        <label>Commercial Invoice #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Qty__c</fullName>
        <label>Commit Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_BillTo__c</fullName>
        <label>Bill to</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Part_Num__c</fullName>
        <label>Customer Part #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Payer__c</fullName>
        <label>Payer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Shipto__c</fullName>
        <label>Ship to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Plant__c</fullName>
        <label>Delivery Plant</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Item__c</fullName>
        <label>Delivery Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_Part_Num__c</fullName>
        <label>Device P/N</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Num__c</fullName>
        <label>Billing Invoice #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <label>Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Price</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEMPN__c</fullName>
        <label>OEMPN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_ERP_Part_Number__c</fullName>
        <label>Oracle ERP Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Num__c</fullName>
        <label>Item #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Num__c</fullName>
        <label>Sales order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orderer_Ref__c</fullName>
        <label>Orderer Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTDESC__c</fullName>
        <label>PARTDESC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Item_Num__c</fullName>
        <label>PO Item Num</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Num__c</fullName>
        <label>Purchase order #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_ListLink__c</fullName>
        <formula>HYPERLINK( 
$Label.PDFlinkforPackingList+&apos;pac_&apos;+RIGHT(Shipment__r.Customer__c,6)+&apos;_&apos;+Shipment_ID__c + IF(ISNULL($User.ContactId) , &apos;&apos;,  &apos;&amp;username=&apos;+$User.Id ), 
 Packing_List__c 
)</formula>
        <label>Packing List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Pack_Slip_Num__c</formula>
        <label>Packing List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Cust_Part_Num__c +&apos; &apos;+&apos;:&apos;+&apos; &apos;+ IBM_Part_Num__c +&apos; &apos;+&apos;:&apos;+&apos; &apos;+ PARTDESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Doc_Type__c</fullName>
        <label>Reference Doc Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refdoc_Date__c</fullName>
        <label>Reference Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Qty__c</fullName>
        <label>Request Quantity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Line</relationshipLabel>
        <relationshipName>Shipment_Line</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipFrom_Address__c</fullName>
        <label>ShipFrom_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom_COO__c</fullName>
        <label>Ship From COO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom__c</fullName>
        <label>Ship From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Item_ID__c</fullName>
        <description>It is auto generated by ICC (Description as per given docs)</description>
        <externalId>true</externalId>
        <label>Ship Item ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ship_Qty__c</fullName>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Shipment_Date__c</formula>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_ID__c</fullName>
        <description>Not required, as salesforce has its own id</description>
        <externalId>true</externalId>
        <label>Shipment #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Line</relationshipLabel>
        <relationshipName>Shipment_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipto_Address__c</fullName>
        <label>Shipto_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Line</relationshipLabel>
        <relationshipName>Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wafer_Type__c</fullName>
        <label>Wafer Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Used for creating report.This is taken from shipment object</description>
        <formula>Shipment__r.Gross_Weight__c</formula>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <label>Shipment Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>